--- a/Portfolio/KMPortfolio.css
+++ b/Portfolio/KMPortfolio.css
@@ -1,7 +1,23 @@
+/*****General Styling ****/
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #FFC0CB;
     color: #3a3931;
     margin:0%;
+    opacity: 1;
+    transition: 3s opacity;
+    letter-spacing: .2vw;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.5vw;
+    overflow-x: hidden; /*This prevents to horizontal scroll bar from appearing when the quote is scolled over*/
+    user-select: none; /*this prevents the text from being highlighted */
+}
+
+body.fade-out {
+    opacity: .1;
 }
 
 h1 {
@@ -9,6 +25,18 @@ h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     margin-top: 3%;
+    color: #1a1a1a;
+}
+
+h1:hover {
+    filter: grayscale(5%);/* this causes a slight gray filter*/
+    transform: scale(1.1);/* elements increase in size by 1.1*/
+    transition: transform 1s;
+}
+
+.white-text {
+    color: #fff;
+    padding-top: 10vh;;
 }
 
 p{
@@ -20,23 +48,38 @@ p{
     padding-right: 20px;
 }
 
+p:hover {
+    transition: transform 1s;
+    transform: scale(1.01);
+}
+
 .center{
     text-align: center;
-    color:#ccc;
+}
+
+.center:hover{
+    transition: transform 2s;
+    transform: scale(1.1);
+}
+
+a {
+    color: blue; /*This makes all links blue*/
+    cursor: pointer; /*This turns the cursor into a hand when over a link*/
+    text-decoration: underline;
 }
 
 q {
     font-style: italic;
-    color:#ccc;
+    color:#fa9cab;
 }
 
 img {
+    filter: grayscale(75%);
     border-radius: 8px;
     max-width: 100%;
-    height: 340px;
+    max-height: 100%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto auto auto auto; /*This centers all images*/
 }
 
 img:hover {
@@ -45,23 +88,26 @@ img:hover {
     transform: scale(1.1);
 }
 
-@media screen and (max-width: 576px) {
-    img {
-         height: 100px;
-         margin-top: 150px;
-    }
-}
-
 footer {
     padding: 2%;
-    background-color: #FFC0CB;
+    background-color: #fa9cab;
 }
 
+/*********NAVBAR STYLING*******/
 .navbar {
+    overflow:hidden;
     position:fixed;
     background-color: #EEE8AA;
     top: 0;
     width: 100%;
+    z-index: 1;
+    -webkit-animation: moveNav 5s;
+    animation: moveNav 5s;
+}
+
+@keyframes moveNav {
+    from {left:-100vw;}
+    to {left:0vw;}
 }
 
 .navbar a {
@@ -76,9 +122,29 @@ footer {
     padding: 14px 16px;
     position:relative;
     font-size: 20px;
-    float: left;   
+    float: left; 
+    -webkit-animation: moveNavText 5.75s;
+    animation: moveNavText 5.75s;  
 }
 
+@keyframes moveNavText{
+    from {top: -100vw;}
+    to {top:0vw;}
+}
+
+.navbar a:hover {
+    background-color:#FFC0CB;
+    color:#A9A9A9;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.5s ease-in;
+}
+
+.navbar a:active {
+    background-color: darkgray;
+}
+
+/*******Video Styling******/
 #code_vid {
     position:fixed;
     right: 0;
@@ -97,55 +163,292 @@ footer {
     background: rgba(0,0,0,0.5);
     color: white;
     width: 100%;
-    padding: 20px;
+    height: 100vh;
+    padding-top: 2vh;
     position:relative;
     -webkit-animation: moveVideoText 5.75s;
     animation: moveVideoText 5.75s;
 }
 
-form {
-    border-radius: 8px;
-    background-color: #EEE8AA;
-    padding: 10px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+@keyframes moveVideoText {
+    from {top: -100vw;}
+    to {top: 0vw;}
 }
 
-/*=====Submit button===*/
-input[type=submit] {
-    background-color: #EEE8AA;
-    color:#3a3931;
-    font-weight: bold;
-    padding: 12px 20px;
-    border: none;
-    cursor: pointer;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/******SlIDESHOW STYLING******/
+#Slideshow_Background {
+    background: rgba(255,255,255,0.35);
 }
 
-input[type=submit]:hover {
-    background-color: #FFC0CB;
-    color: #A9A9A9;
-    transform: scale(1.5);
-    transition: transform 1.5s;
+.mySlides{
+    display: none;
 }
 
-input[type=text]:hover {
-    box-shadow: 0 0 5px #00004d inset;
+#Slideshow_Container {
+    width: 39.5vw;
+    height: auto;
+    padding-top: 4%;
+    position: relative;
+    margin: 0;
 }
 
-input[type=text] {
+#Slideshow_Container a{
+    text-decoration: none;
+}
+
+.Slideshow_Images {
+    vertical-align: middle;
+    height: auto;
+    box-shadow: 0px 5px 10px 12px rgba(0,0,0,.75);
     width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.Previous, .Next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width:auto;
+    padding: 2vw;
+    color: #3a3931;
+    font-weight: bold;
+    font-size:  1.5vw;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    transition: 0.6s ease;
+}
+
+.Next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.Previous:hover, .Next:hover {
+    background-color: rgba(0,0,0,0.8);
+    color: white;
+}
+
+.text {
+    color:#fa9cab;
+    padding: 1vw;
+    position: absolute;
+    bottom: 0;
+    width: 100%; 
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    letter-spacing: .1vw;
+    font-size: 1.5vw;
+    background-color: rgba(0,0,0,0.75);
+    font-weight: bold;
+    border-radius: 0px 0px 7px 7px;
+}
+
+.dot {
+    cursor: pointer;
+    height: 1vw;
+    width: 1vw;
+    margin: .25vw;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    z-index: 1;
+}
+
+.active, .dot:hover {
+    background-color: black;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade{
+    from {opacity: .4;}
+    to { opacity: 1;}
+}
+
+@keyframes fade{
+    from {opacity: .4;}
+    to {opacity: 1;}
+}
+
+/****Form styling******/
+.Pop_Up_Button {
+    position: fixed;
+    bottom: 1.75vw;
+    right: 1.75vw;
+    width: 25vw;
+    background-color: white;
+    color: black;
+    border: solid black;
+    cursor: pointer;
+    -webkit-animation: movePopup 5s;
+    animation: movePopup 5s;
+}
+
+@keyframes movePopup{
+    from {right: -40vw;}
+    to {right: 1.75vw;}
+}
+
+@-webkit-keyframes movePopup {
+    from {right: -40vw;}
+    to {right: 1.75vw;}
+}
+
+.form-popup {
+    z-index: 8;
+    display: none;
+    position: fixed;
+    bottom: .5vw;
+    right: .5vw;
+}
+
+.form-container {
+    max-width: 49vw;
+    padding: 1vw;
+    background-color: #EEE8AA;
+}
+
+.form-container input[type=text] {
+    width: 100%;
+    padding: .93vw;
+    margin: .6vw 0 .6vw 0;
+    border: none;
+    background: #FFC0CB;
+    font-size: 1vw;
+}
+
+button {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    letter-spacing: .3vw;
+    font-size: 1.5vw;
+    font-weight: bold;
+    padding: 1.5vw;
+    cursor: pointer;
+    width: 100%;
+    height: auto;
+}
+
+button:hover, .form-container .btn:hover {
+    color: white;
+    background-color: black;
+    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+    border-color: #fa9cab;
+}
+
+.form-container .btn {
+    background-color: #fa9cab;
+    color: #3a3931;
+    border-color: #1a1a1a;
+    margin-bottom: 1vh;
+}
+
+.form-container .cancel {
+    background-color: #1a1a1a;
+    color: #fa9cab;
+    border-color: #EEE8AA;
+}
+
+.form-container .cancel:hover {
+    color:white;
+    background-color: darkred;
+    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+    border-color: #1a1a1a;
+}
+
+/****media query******/
+
+@media screen and (max-width: 527px) {
+    p {
+        font-size: 3.75vw;
+    }
+}
+
+@media screen and (min-width: 528px) and (max-width: 660px) {
+    p {
+        font-size: 3.5vw;
+    }
+}
+
+@media screen and (min-width: 661px) and (max-width: 799px) {
+    p {
+        font-size: 2.75vw;
+    }
+}
+
+@media screen and (min-width: 800px) and (max-width: 924px) {
+    p {
+        font-size: 2.5vw;
+    }
+}
+
+@media screen and (min-width: 925px) and (max-width: 1050px) {
+    p {
+        font-size: 2.25vw;
+    }
+}
+
+@media screen and (min-width: 1051px) and (max-width: 1310px) {
+    p {
+        font-size: 2vw;
+    }
+}
+
+@media screen and (min-width: 1311px) and (max-width: 1535px) {
+    p {
+        font-size: 1.75vw;
+    }
+}
+
+@media screen and (min-width: 1536px) and (max-width: 2269px) {
+    p {
+        font-size: 1.5vw;
+    }
+}
+
+@media screen and (min-width: 2270px) {
+    p {
+        font-size: 1.35vw;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .navbar a{
+        width: 20%;
+        font-size: 2.5vw;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .quote {
+        font-size: 3.5vw;
+    }
+    .white-text {
+        font-size: 4.5vw;
+    }
+}
+
+@media screen and (min-width: 1725px) {
+    .column_1 {
+        height: 550px;
+    }
+    .column_2 {
+        height: 550px
+    }
+}
+
+@media screen and (min-width: 2000px) {
+    h1{
+        margin-top: 0;;
+    }
+}
+
 
 * {
     box-sizing: border-box;
@@ -154,22 +457,22 @@ input[type=text] {
 .column_1 {
     float: left;
     width: 50%;
-    padding: 10px;
-    padding-top: 3%;
-    height: 400px;
+    padding: 1.6%;
+    height: 450px;
     background-color: #FFC0CB;
 }
 
 .column_2 {
     float:left;
     width: 50%;
-    padding: 10px;
-    padding-top: 1.9%;
-    height: 400px;
+    padding: 1.6%;
+    height: 450px;
     background-color: #EEE8AA;
 }
 
-.column_tall {
-    padding-top: 3.5%;
-    height:450px;
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
+
