--- a/Portfolio/KMPortfolio.css
+++ b/Portfolio/KMPortfolio.css
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-    background-color: #FFC0CB;
-    color: #3a3931;
+    background-color: #deb3ad;
+    color: #3b0404;
     margin:0%;
     opacity: 1;
     transition: 3s opacity;
@@ -21,11 +21,11 @@ body.fade-out {
 }
 
 h1 {
-    text-transform: uppercase;
-    font-family:'Times New Roman', Times, serif;
+    font-family:'Cherry Swash';
+    font-size: 22px;
     text-align: center;
     margin-top: 3%;
-    color: #1a1a1a;
+    color: #3b0404;
 }
 
 h1:hover {
@@ -63,14 +63,16 @@ p:hover {
 }
 
 a {
-    color: blue; /*This makes all links blue*/
+    color: #b95c50; /*This makes all links blue*/
     cursor: pointer; /*This turns the cursor into a hand when over a link*/
     text-decoration: underline;
 }
 
 q {
+    font-family: 'Bad Script';
+    font-size: 22px;
     font-style: italic;
-    color:#fa9cab;
+    color:#de847b;
 }
 
 img {
@@ -90,14 +92,14 @@ img:hover {
 
 footer {
     padding: 2%;
-    background-color: #fa9cab;
+    background-color: #deb3ad;
 }
 
 /*********NAVBAR STYLING*******/
 .navbar {
     overflow:hidden;
     position:fixed;
-    background-color: #EEE8AA;
+    background-color: #deb3ad;
     top: 0;
     width: 100%;
     z-index: 1;
@@ -113,11 +115,11 @@ footer {
 .navbar a {
     display: block;
     list-style: none;
-    background-color: #EEE8AA;
+    background-color: #deb3ad;
     text-align: center;
     display: inline;
-    color:#3a3931;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#3b0404;
+    font-family:'Cherry Swash';
     text-decoration: none;
     padding: 14px 16px;
     position:relative;
@@ -133,8 +135,8 @@ footer {
 }
 
 .navbar a:hover {
-    background-color:#FFC0CB;
-    color:#A9A9A9;
+    background-color:#de847b;
+    color:#3b0404;
     font-weight: bold;
     cursor: pointer;
     transition: 0.5s ease-in;
@@ -190,6 +192,7 @@ footer {
     padding-top: 4%;
     position: relative;
     margin: 0;
+    margin-left: 400px;
 }
 
 #Slideshow_Container a{
@@ -228,7 +231,7 @@ footer {
 }
 
 .text {
-    color:#fa9cab;
+    color:#deb3ad;
     padding: 1vw;
     position: absolute;
     bottom: 0;
@@ -237,7 +240,7 @@ footer {
     font-family:'Times New Roman', Times, serif;
     letter-spacing: .1vw;
     font-size: 1.5vw;
-    background-color: rgba(0,0,0,0.75);
+    background-color: #3b0404;
     font-weight: bold;
     border-radius: 0px 0px 7px 7px;
 }
@@ -281,9 +284,10 @@ footer {
     bottom: 1.75vw;
     right: 1.75vw;
     width: 25vw;
-    background-color: white;
-    color: black;
-    border: solid black;
+    background-color: #b95c50;
+    color: #3b0404;
+    border: solid #3b0404;
+    border-radius: 6px;
     cursor: pointer;
     -webkit-animation: movePopup 5s;
     animation: movePopup 5s;
@@ -310,7 +314,7 @@ footer {
 .form-container {
     max-width: 49vw;
     padding: 1vw;
-    background-color: #EEE8AA;
+    background-color: #b95c50;
 }
 
 .form-container input[type=text] {
@@ -318,12 +322,12 @@ footer {
     padding: .93vw;
     margin: .6vw 0 .6vw 0;
     border: none;
-    background: #FFC0CB;
+    background: #deb3ad;
     font-size: 1vw;
 }
 
 button {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:'Cherry Swash';
     letter-spacing: .3vw;
     font-size: 1.5vw;
     font-weight: bold;
@@ -334,32 +338,32 @@ button {
 }
 
 button:hover, .form-container .btn:hover {
-    color: white;
-    background-color: black;
+    color: #deb3ad;
+    background-color: #b95c50;
     transition-duration: 1s;
     -webkit-transition-duration: 1s;
-    border-color: #fa9cab;
+    border-color: #deb3ad;
 }
 
 .form-container .btn {
-    background-color: #fa9cab;
-    color: #3a3931;
-    border-color: #1a1a1a;
+    background-color: #deb3ad;
+    color: #3b0404;
+    border-color: #3b0404;
     margin-bottom: 1vh;
 }
 
 .form-container .cancel {
-    background-color: #1a1a1a;
-    color: #fa9cab;
-    border-color: #EEE8AA;
+    background-color: #3b0404;
+    color: #deb3ad;
+    border-color: #deb3ad;
 }
 
 .form-container .cancel:hover {
-    color:white;
-    background-color: darkred;
+    color:#deb3ad;
+    background-color: #b95c50;
     transition-duration: 1s;
     -webkit-transition-duration: 1s;
-    border-color: #1a1a1a;
+    border-color: #3b0404;
 }
 
 /****media query******/
@@ -459,7 +463,7 @@ button:hover, .form-container .btn:hover {
     width: 50%;
     padding: 1.6%;
     height: 450px;
-    background-color: #FFC0CB;
+    background-color: #deb3ad;
 }
 
 .column_2 {
@@ -467,7 +471,7 @@ button:hover, .form-container .btn:hover {
     width: 50%;
     padding: 1.6%;
     height: 450px;
-    background-color: #EEE8AA;
+    background-color: #de847b;
 }
 
 .row:after {
